<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiPDA·NG</string>
    <string name="author">作者 ：绿皮怪兽</string>
    <string name="action_refresh">刷新</string>
    <string name="action_image_gallery">图片浏览</string>
    <string name="action_reply">回复</string>
    <string name="action_show_all">显示全部帖子</string>
    <string name="action_edit">编辑</string>
    <string name="action_search">搜索帖子</string>
    <string name="action_goto_page">页面跳转</string>
    <string name="action_quote">引用</string>
    <string name="action_copy">复制</string>
    <string name="action_only_floor_author">只看该作者</string>
    <string name="action_select_text">文字选择</string>
    <string name="action_share">分享</string>
    <string name="action_save">保存</string>
    <string name="action_close">关闭</string>
    <string name="action_only_author">只看楼主</string>
    <string name="action_open_url">浏览器打开</string>
    <string name="action_copy_url">复制帖子地址</string>
    <string name="action_thread_list_settings">版面设置</string>
    <string name="action_open_by_url">打开站内地址</string>
    <string name="action_upload_img">上传图片</string>
    <string name="action_upload_img2">上传图片(旧)</string>
    <string name="action_delete_post">删除本帖</string>
    <string name="action_restore_content">恢复输入内容</string>
    <string name="action_device_info">追加系统信息</string>
    <string name="action_add_favorite">添加收藏</string>
    <string name="action_remove_favorite">取消收藏</string>
    <string name="action_add_attention">添加关注</string>
    <string name="action_remove_attention">取消关注</string>
    <string name="action_send_sms">发送短消息</string>
    <string name="action_clear_sms">清空短消息</string>
    <string name="action_blacklist">加入黑名单</string>
    <string name="action_remove_blacklist">移除黑名单</string>
    <string name="action_favorites">查看收藏</string>
    <string name="action_attention">查看关注</string>
    <string name="iv_avatar">头像</string>
    <string name="action_send">发送</string>
    <string name="action_new_thread">发表新帖</string>
    <string name="action_quick_reply">快速回复</string>
    <string name="action_filter_by_type">分类</string>
    <string name="action_text_size">文字调整</string>
    <string name="action_order_by_thread">按发表排序</string>
    <string name="action_order_by_reply">按回复排序</string>
    <string name="action_show_stick_threads">显示置顶帖</string>

    <string name="recipient">收件人</string>
    <string name="content">内容</string>
    <string name="txt_quick_hint">回复</string>
    <string name="ib_quick_send">发送</string>

    <!-- Pull to refresh related -->
    <string name="header_hint_load_previous">下拉加载前一页</string>
    <string name="footer_hint_load_next">点击加载下一页</string>
    <string name="footer_hint_error">发生错误，点击重试</string>
    <string name="footer_hint_end">～ END ～</string>
    <string name="hint_subject">主题</string>
    <string name="content_hint_error">加载失败</string>
    <string name="content_hint_nodata">没有数据</string>
    <string name="content_not_login">未登录</string>

    <string name="screen_portrait">竖向</string>
    <string name="screen_landscape">横向</string>
    <string name="screen_system">系统</string>
    <string name="screen_auto">自动</string>

    <string name="title_drawer_forum">论坛</string>
    <string name="title_drawer_search">搜索</string>
    <string name="title_drawer_new_posts">今日新帖</string>
    <string name="title_drawer_mypost">我的帖子</string>
    <string name="title_drawer_myreply">我的回复</string>
    <string name="title_drawer_favorites">收藏关注</string>
    <string name="title_drawer_histories">浏览记录</string>
    <string name="title_drawer_sms">短消息</string>
    <string name="title_drawer_notify">信息提醒</string>
    <string name="title_drawer_setting">设置</string>
    <string name="title_drawer_expandable">更多</string>

    <string name="title_my_favorites">我的收藏</string>
    <string name="title_my_attention">我的关注</string>

    <string name="prefix_search_fulltext">全文搜索：</string>
    <string name="prefix_search_history">搜索记录：</string>
    <string name="user_online">目前在线</string>
    <string name="site_url">站内地址</string>
    <string name="new_thread">发表主题</string>

    <string name="title_text_size_adjust">标题字号调整</string>
    <string name="title_post_text_size_adjust">帖子字号调整</string>
    <string name="title_post_line_spacing">帖子行距调整</string>

    <string name="report_reminder">
        问题将反馈到客户端专贴
        \n反馈前请先看 1楼 的要求以及常见问题
        \n提供必要信息，避免重复提问，以提高效率
        \n\n谢谢
    </string>

    <string name="sample_title_text">
        痔垫（英语：Hemorrhoids），是位于肛管的血管组织
    </string>

    <string name="sample_post_text">
        在正常情形下可协助控制排便[2]。\n
        但当它肿胀或发炎时，会呈现病态或变成痔疮（英语：Hemorrhoids，英文与痔垫为同一字）[8]。\n
        痔疮的症状依其发生位置及种类而定[4]。\n
        来源：维基百科
    </string>

</resources>