<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <item
        android:id="@+id/action_goto"
        android:icon="?icon_goto_page"
        android:title="@string/action_goto_page"
        app:showAsAction="ifRoom" />
     -->
    <item
        android:id="@+id/action_reply"
        android:title="@string/action_reply" />
    <item
        android:id="@+id/action_refresh_detail"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_image_gallery"
        android:title="@string/action_image_gallery" />
    <item
        android:id="@+id/action_add_favorite"
        android:title="@string/action_add_favorite" />
    <item
        android:id="@+id/action_add_attention"
        android:title="@string/action_add_attention" />
    <item
        android:id="@+id/action_only_author"
        android:title="@string/action_only_author" />
    <item
        android:id="@+id/action_open_url"
        android:title="@string/action_open_url" />
    <item
        android:id="@+id/action_copy_url"
        android:title="@string/action_copy_url" />
    <item
        android:id="@+id/action_share_thread"
        android:title="@string/action_share" />

</menu>