<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    <item
        android:id="@+id/action_refresh_list"
        android:icon="?icon_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
      -->

    <item
        android:id="@+id/action_filter_by_type"
        android:title="@string/action_filter_by_type"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_thread"
        android:title="@string/action_new_thread" />

    <item
        android:id="@+id/action_order_by"
        android:checkable="true"
        android:title="@string/action_order_by_thread"/>

    <item
        android:id="@+id/action_show_stick_threads"
        android:checkable="true"
        android:title="@string/action_show_stick_threads"/>

    <item
        android:id="@+id/action_thread_list_settings"
        android:title="@string/action_text_size"/>

    <item
        android:id="@+id/action_open_by_url"
        android:title="@string/action_open_by_url" />

</menu>