<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutId="new_thread"
        android:shortcutShortLabel="@string/new_thread">
        <intent
            android:action="new_thread"
            android:targetClass="net.jejer.hipda.ui.MainFrameActivity"
            android:targetPackage="net.jejer.hipda.ng"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutId="search"
        android:shortcutShortLabel="@string/title_drawer_search">
        <intent
            android:action="search"
            android:targetClass="net.jejer.hipda.ui.MainFrameActivity"
            android:targetPackage="net.jejer.hipda.ng"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_mail"
        android:shortcutId="sms"
        android:shortcutShortLabel="@string/title_drawer_sms">
        <intent
            android:action="sms"
            android:targetClass="net.jejer.hipda.ui.MainFrameActivity"
            android:targetPackage="net.jejer.hipda.ng"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_favorite"
        android:shortcutId="favorite"
        android:shortcutShortLabel="@string/title_my_favorites">
        <intent
            android:action="favorite"
            android:targetClass="net.jejer.hipda.ui.MainFrameActivity"
            android:targetPackage="net.jejer.hipda.ng"/>
    </shortcut>
</shortcuts>